# openvino_yolo_cpp

./: .gitignore  CMakeLists.txt  CMakeLists_v1.md  README.md  build.bat  build_commands.md  dlls_deploy.bat  inference.cpp  inference.h  inference_speed_metrics.md  main.cpp  main_benchmark_loop.md  main_manual_pre_post.md  main_save.md  main_v1.md  main_v2_compiles.md
models/mapillary_yolo_v8_nano_1_class_640_no_filter_v2_fp16_openvino_model/: mapillary_yolo_v8_nano_1_class_640_no_filter_v2.xml  metadata.yaml
models/mapillary_yolo_v8_nano_1_class_768_no_filter_v1_fp16_openvino_model/: mapillary_yolo_v8_nano_1_class_768_no_filter_v1.xml  metadata.yaml
models/mapillary_yolo_v8_nano_1_class_768_no_filter_v1_fp32_openvino_model/: mapillary_yolo_v8_nano_1_class_768_no_filter_v1.xml  metadata.yaml
models/mapillary_yolo_v8_nano_1_class_960_no_filter_v1_fp16_openvino_model/: mapillary_yolo_v8_nano_1_class_960_no_filter_v1.xml  metadata.yaml
models/mapillary_yolo_v8_small_1_class_640_no_filter_v1_fp16_openvino_model/: mapillary_yolo_v8_small_1_class_640_no_filter_v1.xml  metadata.yaml
models/mapillary_yolo_v8_small_1_class_640_no_filter_v1_fp32_openvino_model/: mapillary_yolo_v8_small_1_class_640_no_filter_v1.xml  metadata.yaml
models/yolo_nano_v2_1_class_640_no_filter_int8_openvino_model/: metadata.yaml
models/yolo_nano_v2_1_class_640_no_filter_openvino_model/: metadata.yaml
